apps/audiobookshelf/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: audiobookshelf
  namespace: default
spec:
  type: LoadBalancer
  selector:
    app: audiobookshelf
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
